--- a/assets/scss/partials/_mixins.scss
+++ b/assets/scss/partials/_mixins.scss
@@ -4,6 +4,7 @@
 	font-weight: 700;
 	font-family: 'Raleway';
 	text-transform: uppercase;
+	color:$hColor;
 }
 
 @mixin sectionh3{
@@ -13,6 +14,7 @@
 	font-family: 'Karla';
 	text-transform: uppercase;
 	margin-top: 12px;
+	color:$hColor;
 }
 
 @mixin button{
