--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -66,3 +66,5 @@ body{
 @import "partials/team";
 @import "partials/OneMonthFree";
 @import "partials/footer";
+@import "partials/pages/contact";
+@import "partials/pageHeader";
