--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -66,5 +66,6 @@ body{
 @import "partials/team";
 @import "partials/OneMonthFree";
 @import "partials/footer";
-@import "partials/pages/contact";
 @import "partials/pageHeader";
+@import "partials/pages/contact";
+@import "partials/pages/newsDetails";
