--- a/assets/scss/partials/_pageHeader.scss
+++ b/assets/scss/partials/_pageHeader.scss
@@ -8,11 +8,11 @@
 	padding-top:123px;
 	h1{
 		font: 700 48px / 30px 'Raleway';
-		color:#ffffff;
+		color:#ffffff !important;
 	}
 	h3{
 		margin-top:19px;
 		font:500 14px / 30px 'Raleway';
-		color:#fff;
+		color:#fff !important;
 	}
 }
