--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -69,3 +69,4 @@ body{
 @import "partials/pageHeader";
 @import "partials/pages/contact";
 @import "partials/pages/newsDetails";
+@import "partials/pages/portfolio2";
