--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -70,3 +70,4 @@ body{
 @import "partials/pages/contact";
 @import "partials/pages/newsDetails";
 @import "partials/pages/portfolio2";
+@import "partials/pages/services";
