--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -789,9 +789,20 @@ body {
 #services .container {
   padding-top: 100px; }
   #services .container h1 {
-    font: 700 30px / 24px 'Raleway'; }
+    color: #23282f;
+    font-size: 30px;
+    font-weight: 700;
+    font-family: 'Raleway';
+    text-transform: uppercase;
+    color: #23282f; }
   #services .container h3 {
-    font: 400 18px / 24px 'Karla'; }
+    color: #23282f;
+    font-size: 18px;
+    font-weight: 400;
+    font-family: 'Karla';
+    text-transform: uppercase;
+    margin-top: 12px;
+    color: #23282f; }
   #services .container .row {
     padding: 65px 0 60px 0;
     border-bottom: 1px solid #e6edee; }
@@ -848,5 +859,93 @@ body {
         font: 400 14px / 24px 'Karla';
         text-transform: uppercase;
         letter-spacing: 1px; }
+
+#news .container-fluid .container {
+  padding: 100px 0; }
+  #news .container-fluid .container .row h1 {
+    color: #23282f;
+    font-size: 30px;
+    font-weight: 700;
+    font-family: 'Raleway';
+    text-transform: uppercase;
+    color: #23282f; }
+  #news .container-fluid .container .row h3 {
+    color: #23282f;
+    font-size: 18px;
+    font-weight: 400;
+    font-family: 'Karla';
+    text-transform: uppercase;
+    margin-top: 12px;
+    color: #23282f;
+    margin-bottom: 33px; }
+  #news .container-fluid .container .col-md-4 {
+    padding-left: 0; }
+    #news .container-fluid .container .col-md-4 .newsImage {
+      width: 360px;
+      height: 378px;
+      background-color: #8d8d8d;
+      overflow: hidden; }
+      #news .container-fluid .container .col-md-4 .newsImage img {
+        height: auto;
+        max-height: 378px;
+        margin-left: -90px; }
+    #news .container-fluid .container .col-md-4 .newsContent {
+      background-color: #e5eef0;
+      width: 360px;
+      height: 378px;
+      padding: 53px 41px 0 41px;
+      text-align: center;
+      /*	&:first-child{
+      		.newsContent::before{
+      			content:"";
+      			height:0px;
+      			width:0px;
+      			border-top:none;
+      			border-bottom:15px solid $thirdColor;
+      			border-left:10px solid transparent;
+      			border-right:10px solid transparent;
+      			position:absolute;
+      			top:-15px;
+      			left:555px;
+      		}*/ }
+      #news .container-fluid .container .col-md-4 .newsContent span {
+        display: block; }
+        #news .container-fluid .container .col-md-4 .newsContent span:first-child {
+          font: 400 48px / 24px 'Raleway';
+          margin-bottom: 6px; }
+        #news .container-fluid .container .col-md-4 .newsContent span:last-child {
+          font: 400 16px / 24px 'Raleway';
+          text-transform: uppercase; }
+      #news .container-fluid .container .col-md-4 .newsContent h4 {
+        font: 500 20px / 24px 'Raleway';
+        margin-top: 35px; }
+      #news .container-fluid .container .col-md-4 .newsContent p {
+        font: 400 14px / 24px 'Karla';
+        letter-spacing: 0px;
+        margin-top: 25px;
+        margin-bottom: 36px; }
+      #news .container-fluid .container .col-md-4 .newsContent button {
+        text-align: center;
+        background-color: #29c2e1;
+        color: #fff;
+        width: 141px;
+        height: 38px;
+        border-radius: 60px;
+        font-size: 14.5px;
+        letter-spacing: 1px;
+        transition-duration: 0.2s; }
+        #news .container-fluid .container .col-md-4 .newsContent button:hover {
+          background-color: #178ea6; }
+      #news .container-fluid .container .col-md-4 .newsContent news::after {
+        content: "";
+        width: 0px;
+        height: 0px;
+        border-top: none;
+        border-bottom: 15px solid #e5eef0;
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+        position: absolute;
+        top: 363px;
+        left: 170px; }
 
 /*# sourceMappingURL=style.css.map */
