--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -71,3 +71,4 @@ body{
 @import "partials/pages/newsDetails";
 @import "partials/pages/portfolio2";
 @import "partials/pages/services";
+@import "partials/pages/news";
