--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -69,6 +69,7 @@ body{
 @import "partials/pageHeader";
 @import "partials/pages/contact";
 @import "partials/pages/newsDetails";
+@import "partials/pages/portfolio";
 @import "partials/pages/portfolio2";
 @import "partials/pages/services";
 @import "partials/pages/news";
