About page ready

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -73,3 +73,4 @@ body{
 @import "partials/pages/portfolio2";
 @import "partials/pages/services";
 @import "partials/pages/news";
+@import "partials/pages/about";
