--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -761,11 +761,6 @@ body {
         text-transform: uppercase; }
     #portfolio .container-fluid .container .col-md-3 .portfolioItem:hover div.innerPortItem {
       visibility: visible; }
-  #portfolio .container-fluid .container .col-md-3:first-child {
-    padding-left: 0px; }
-
-#oneMonthFreePortfolio .container-fluid .container {
-  padding-top: 83px !important; }
 
 #portfolioTwo .container {
   padding-top: 100px; }
@@ -987,5 +982,31 @@ body {
         position: absolute;
         top: 363px;
         left: 170px; }
+
+#about .container-fluid .container {
+  padding: 100px 0 72px 0;
+  border-bottom: 1px solid #e6edee; }
+  #about .container-fluid .container .row h1 {
+    color: #23282f;
+    font-size: 30px;
+    font-weight: 700;
+    font-family: 'Raleway';
+    text-transform: uppercase;
+    color: #23282f; }
+  #about .container-fluid .container .row h3 {
+    color: #23282f;
+    font-size: 18px;
+    font-weight: 400;
+    font-family: 'Karla';
+    text-transform: uppercase;
+    margin-top: 12px;
+    color: #23282f;
+    margin-bottom: 46px; }
+  #about .container-fluid .container .row .col-md-6 p {
+    font: 400 14px / 24px 'Karla'; }
+  #about .container-fluid .container .row .col-md-6:first-child {
+    padding-left: 0; }
+  #about .container-fluid .container .row .col-md-6:last-child {
+    padding-right: 0 !important; }
 
 /*# sourceMappingURL=style.css.map */
