--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -72,5 +72,6 @@ body{
 @import "partials/pages/portfolio";
 @import "partials/pages/portfolio2";
 @import "partials/pages/services";
+@import "partials/pages/services2";
 @import "partials/pages/news";
 @import "partials/pages/about";
