--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -75,3 +75,4 @@ body{
 @import "partials/pages/services2";
 @import "partials/pages/news";
 @import "partials/pages/about";
+@import "partials/pages/blog";
